// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering on match snapshot for OTP discount 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "paddingTop": 16,
      },
    ]
  }
  testID="discount-detail"
>
  <View
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Description
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    testID="discount-description"
    weight="Regular"
    weightColorFactory={[Function]}
  />
  <View
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Validity
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
    weightColorFactory={[Function]}
  >
    07/02/2022 - 20/02/2022
  </Text>
  <View
    small={true}
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Discount code
  </Text>
  <View
    style={Object {}}
    testID="otp-code-component"
  >
    <View
      accessibilityHint="By pressing the item you will copy the code"
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "row",
          },
          Object {
            "alignItems": "center",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        color="bluegreyDark"
        font="RobotoMono"
        style={
          Array [
            Object {
              "fontSize": 20,
            },
            undefined,
            Object {
              "color": "#17324D",
              "fontFamily": "Roboto Mono",
              "fontStyle": "normal",
              "fontWeight": "700",
            },
          ]
        }
        weight="Bold"
      >
        ••••••••••
      </Text>
      <SvgMock
        fill="#0073E6"
        height={24}
        width={24}
      />
    </View>
  </View>
  <View
    spacer={true}
    style={Object {}}
  />
</View>
`;

exports[`when rendering on match snapshot for bucket discount 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "paddingTop": 16,
      },
    ]
  }
  testID="discount-detail"
>
  <View
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Description
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    testID="discount-description"
    weight="Regular"
    weightColorFactory={[Function]}
  />
  <View
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Validity
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
    weightColorFactory={[Function]}
  >
    07/02/2022 - 20/02/2022
  </Text>
  <View
    small={true}
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Discount code
  </Text>
  <View
    style={Object {}}
    testID="bucket-code-component"
  >
    <View
      accessibilityHint="By pressing the item you will copy the code"
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "row",
          },
          Object {
            "alignItems": "center",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        color="bluegreyDark"
        font="RobotoMono"
        style={
          Array [
            Object {
              "fontSize": 20,
            },
            undefined,
            Object {
              "color": "#17324D",
              "fontFamily": "Roboto Mono",
              "fontStyle": "normal",
              "fontWeight": "700",
            },
          ]
        }
        weight="Bold"
      >
        ••••••••••
      </Text>
      <SvgMock
        fill="#0073E6"
        height={24}
        width={24}
      />
    </View>
  </View>
  <View
    spacer={true}
    style={Object {}}
  />
</View>
`;

exports[`when rendering on match snapshot for landing page discount 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "paddingTop": 16,
      },
    ]
  }
  testID="discount-detail"
>
  <View
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Description
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    testID="discount-description"
    weight="Regular"
    weightColorFactory={[Function]}
  />
  <View
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Validity
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
    weightColorFactory={[Function]}
  >
    07/02/2022 - 20/02/2022
  </Text>
  <View
    spacer={true}
    style={Object {}}
  />
</View>
`;

exports[`when rendering on match snapshot for static code 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "paddingTop": 16,
      },
    ]
  }
  testID="discount-detail"
>
  <View
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Description
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    testID="discount-description"
    weight="Regular"
    weightColorFactory={[Function]}
  />
  <View
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Validity
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
    weightColorFactory={[Function]}
  >
    07/02/2022 - 20/02/2022
  </Text>
  <View
    small={true}
    spacer={true}
    style={Object {}}
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Discount code
  </Text>
  <View
    accessibilityHint="By pressing the item you will copy the code"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {},
        Object {
          "flexDirection": "row",
        },
        Object {
          "alignItems": "center",
          "justifyContent": "space-between",
        },
      ]
    }
    testID="static-code-component"
  >
    <Text
      color="bluegreyDark"
      font="RobotoMono"
      style={
        Array [
          Object {
            "fontSize": 20,
          },
          undefined,
          Object {
            "color": "#17324D",
            "fontFamily": "Roboto Mono",
            "fontStyle": "normal",
            "fontWeight": "700",
          },
        ]
      }
      weight="Bold"
    >
      ••••••••••
    </Text>
    <SvgMock
      fill="#0073E6"
      height={24}
      width={24}
    />
  </View>
  <View
    spacer={true}
    style={Object {}}
  />
</View>
`;
